Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5631

Incorrect swabbing of struct llog_rec_tail

XMLWordPrintable

    • 3
    • 15747

      llog_rec_tail is accessed directly (tail = &cr->cr_tail) in lustre_swab_llog_rec, though it comes after a variable length structure. This lead to the cr_name field of the changelog_record being shuffled and the actual tail being left untouched...

            jamesanunez James Nunez (Inactive)
            hdoreau Henri Doreau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: